--- a/themes/default/layouts/salaprensa.htm
+++ b/themes/default/layouts/salaprensa.htm
@@ -129,8 +129,14 @@ code = "redes-sociales"
         {% partial "reports" %}
         </div>
     </div>
-
     
+    <div class="gdossier">
+    <div class="cntdossier">
+        <div class="mapdossier"></div>
+    </div> 
+    </div>
+    {% component 'staticPage' %}
+        
     {% partial 'site/footer' %}
 
     <!-- SCRIPTS -->
