--- a/themes/default/partials/allreports.htm
+++ b/themes/default/partials/allreports.htm
@@ -43,7 +43,7 @@
 {% else %}
 
 <div class="mock-space-prensa">
-	<p>Vuelve más tarde, tendremos un montón de reportajes para ti.</p>
+	<p>{{'Vuelve más tarde, tendremos un montón de reportajes para ti.'|_}}</p>
 </div>
 
 
