--- a/themes/default/partials/publications.htm
+++ b/themes/default/partials/publications.htm
@@ -65,7 +65,7 @@
 {% else %}
 
 <div class="mock-space-prensa">
-	<p>Vuelve más tarde, tendremos un montón de publicaciones para ti.</p>
+	<p>{{'Vuelve más tarde, tendremos un montón de publicaciones para ti.'|_}}</p>
 </div>
 
 
