--- a/themes/default/partials/reports.htm
+++ b/themes/default/partials/reports.htm
@@ -99,7 +99,7 @@
 	{% endif %}
 	<div class="gr gr3">
 		<div class="rprtc5">
-			CONOCE CÁDIZ EN REPORTAJES
+			{{'CONOCE CÁDIZ EN REPORTAJES'|_}}
 			<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow2.png" alt="">
 		</div>
 		
@@ -123,12 +123,11 @@
 			</a>
 			{% endif %}
 			<div class="rprtc6 rpart3">
-				<a href='{{preurl~"/"~lang}}/todos-los-reportajes'>Todos los reportajes<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" alt=""></a>
+				<a href='{{preurl~"/"~lang}}/todos-los-reportajes'>{{'Todos los reportajes'|_}}<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" alt=""></a>
 			</div>
 			
 		</div>		
 	</div>
-
 	
 </div>
 
