--- a/themes/default/layouts/salaprensa.htm
+++ b/themes/default/layouts/salaprensa.htm
@@ -141,7 +141,7 @@ code = "redes-sociales"
                 <div class="gm g1">
                     <div id='g1' class="mapboxd">
                         <div id='e1'  class="enlaces">
-                            <a href="">Canadá<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/canada">Canadá<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -150,7 +150,7 @@ code = "redes-sociales"
                 <div class="gm g2">
                     <div id='g2' class="mapboxd">
                         <div id='e2'  class="enlaces">
-                            <a href="">Estados Unidos<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/estados_unidos">Estados Unidos<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -159,8 +159,8 @@ code = "redes-sociales"
                 <div class="gm g3">
                     <div id='g3' class="mapboxd">
                         <div id='e3'  class="enlaces">
-                            <a href="">Costa Rica<div class="flechapais"></div></a>
-                            <a href="">México<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/costa_rica">Costa Rica<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/mexico">México<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -169,8 +169,8 @@ code = "redes-sociales"
                 <div class="gm g4">
                     <div id='g4' class="mapboxd">
                         <div id='e4'  class="enlaces">
-                            <a href="">Argentina<div class="flechapais"></div></a>
-                            <a href="">Brasil<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/argentina">Argentina<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/brasil">Brasil<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -179,11 +179,11 @@ code = "redes-sociales"
                 <div class="gm g5">
                     <div id='g5' class="mapboxd">
                         <div id='e5'  class="enlaces">
-                            <a href="">Dinamarca<div class="flechapais"></div></a>
-                            <a href="">Estonia<div class="flechapais"></div></a>
-                            <a href="">Finlandia<div class="flechapais"></div></a>
-                            <a href="">Noruega<div class="flechapais"></div></a>
-                            <a href="">Suecia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/dinamarca">Dinamarca<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/estonia">Estonia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/finlandia">Finlandia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/noruega">Noruega<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/suecia">Suecia<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -193,10 +193,10 @@ code = "redes-sociales"
                     <div id='g6' class="mapboxd">
                         <div id='e6'  class="enlaces">
                             <a href="{{preurl}}/sala-prensa/prensa/españa">España<div class="flechapais"></div></a>
-                            <a href="">Francia<div class="flechapais"></div></a>
-                            <a href="">Irlanda<div class="flechapais"></div></a>
-                            <a href="">Portugal<div class="flechapais"></div></a>
-                            <a href="">Reino Unido<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/francia">Francia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/irlanda">Irlanda<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/portugal">Portugal<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/reino_unido">Reino Unido<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -205,16 +205,16 @@ code = "redes-sociales"
                 <div class="gm g7">
                     <div id='g7' class="mapboxd">
                         <div id='e7'  class="enlaces">
-                            <a href="">Alemania<div class="flechapais"></div></a>
-                            <a href="">Austria<div class="flechapais"></div></a>
-                            <a href="">Bélgica<div class="flechapais"></div></a>
-                            <a href="">Holanda<div class="flechapais"></div></a>
-                            <a href="">Hungría<div class="flechapais"></div></a>
-                            <a href="">Italia<div class="flechapais"></div></a>
-                            <a href="">Polonia<div class="flechapais"></div></a>
-                            <a href="">República Checa<div class="flechapais"></div></a>
-                            <a href="">Suiza<div class="flechapais"></div></a>
-                            <a href="">Ucrania<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/alemania">Alemania<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/austria">Austria<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/belgica">Bélgica<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/holanda">Holanda<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/hungría">Hungría<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/italia">Italia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/polonia">Polonia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/republica_checa">República Checa<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/suiza">Suiza<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/ucrania">Ucrania<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -223,7 +223,7 @@ code = "redes-sociales"
                 <div class="gm g8">
                     <div id='g8' class="mapboxd">
                         <div id='e8'  class="enlaces">
-                            <a href="">Israel<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/israel">Israel<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -232,7 +232,7 @@ code = "redes-sociales"
                 <div class="gm g9">
                     <div id='g9' class="mapboxd">
                         <div id='e9'  class="enlaces">
-                            <a href="">Rusia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/rusia">Rusia<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -241,7 +241,7 @@ code = "redes-sociales"
                 <div class="gm g10">
                     <div id='g10' class="mapboxd">
                         <div id='e10'  class="enlaces">
-                            <a href="">China<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/china">China<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -250,7 +250,7 @@ code = "redes-sociales"
                 <div class="gm g11">
                     <div id='g11' class="mapboxd">
                         <div id='e11'  class="enlaces">
-                            <a href="">Japón<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/japon">Japón<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -259,7 +259,7 @@ code = "redes-sociales"
                 <div class="gm g12">
                     <div id='g12' class="mapboxd">
                         <div id='e12'  class="enlaces">
-                            <a href="">Singapur<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/singapur">Singapur<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
@@ -268,7 +268,7 @@ code = "redes-sociales"
                 <div class="gmv g13">
                     <div id='g13' class="mapboxd">
                         <div id='e13'  class="enlaces">
-                            <a href="">Australia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/australia">Australia<div class="flechapais"></div></a>
                         </div>
                         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
                     </div>
