--- a/themes/default/layouts/prensa.htm
+++ b/themes/default/layouts/prensa.htm
@@ -34,8 +34,16 @@ code = "redes-sociales"
         if($this['lang']==''){
             $this['lang']='es';
         }
+        if (strpos($_SERVER['HTTP_HOST'], 'localhost') !== false) {
+            $this['preurl'] = '/cadizturismo';
+        } else {
+            $this['preurl'] = '';
+        }
+        $this['startPag'] = 1;
+        $this['numberReg'] = 5;
 
-        //$this['news'] = $this->staticApp->newList();
+        $this['numPag'] = ceil($this->staticApp->reportListCount()/$this['numberReg']);
+        $this['reports'] = $this->staticApp->reportListPag(1,$this['numberReg'],$this['lang']);
 
         $this['urlPage'] = $this->page->url;
 
@@ -77,8 +85,8 @@ code = "redes-sociales"
                $this['metaDescription'] = $this->page->settings["meta_description"];
             }
         }
-    }
 
+    }
 ?>
 
 ==
@@ -109,23 +117,188 @@ code = "redes-sociales"
     {% partial 'device-rotate' %}
     {% partial 'site/header' %}
 
-    {% component 'staticPage' %}
-
-    <!-- <div id='prtlNews' class="all-events">
-        <div class="all-events-container">
-        {% partial "news" %}
+    <!-- HEADER -->
+    <div class="header-general header-salaprensa">
+        <div class="header-container">
+            <div class="header-txt">
+                <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Sala Prensa"|_ }}</span><span class="con-encanto" style="display: block;"> &nbsp</span></h1>
+                <img class="brush brushTop" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
+            </div>
         </div>
-    </div> -->
-
+    </div>
+    </div>
+ 
+     <div id='prtlSalaprensa' class="all-events">
+        <div class="all-events-container">
+        {% partial "reports" %}
+        </div>
+    </div>
+    
+    <div class="gdossier">
+    <div class="cntdossier">
+        <div class="mapdossier">
+            <div class='mpds mapcd'>
+                <div class="gm g1">
+                    <div id='g1' class="mapboxd">
+                        <div id='e1'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/canada">Canadá<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='1' class="pointmap"></div>
+                </div>
+                <div class="gm g2">
+                    <div id='g2' class="mapboxd">
+                        <div id='e2'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/estados_unidos">Estados Unidos<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='2' class="pointmap"></div>
+                </div>
+                <div class="gm g3">
+                    <div id='g3' class="mapboxd">
+                        <div id='e3'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/costa_rica">Costa Rica<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/mexico">México<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='3' class="pointmap"></div>
+                </div>
+                <div class="gm g4">
+                    <div id='g4' class="mapboxd">
+                        <div id='e4'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/argentina">Argentina<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/brasil">Brasil<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='4' class="pointmap"></div>
+                </div>
+                <div class="gm g5">
+                    <div id='g5' class="mapboxd">
+                        <div id='e5'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/dinamarca">Dinamarca<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/estonia">Estonia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/finlandia">Finlandia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/noruega">Noruega<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/suecia">Suecia<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='5' class="pointmap"></div>
+                </div>
+                <div class="gm g6">
+                    <div id='g6' class="mapboxd">
+                        <div id='e6'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/españa">España<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/francia">Francia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/irlanda">Irlanda<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/portugal">Portugal<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/reino_unido">Reino Unido<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='6' class="pointmap"></div>
+                </div>
+                <div class="gm g7">
+                    <div id='g7' class="mapboxd">
+                        <div id='e7'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/alemania">Alemania<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/austria">Austria<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/belgica">Bélgica<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/holanda">Holanda<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/hungría">Hungría<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/italia">Italia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/polonia">Polonia<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/republica_checa">República Checa<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/suiza">Suiza<div class="flechapais"></div></a>
+                            <a href="{{preurl}}/sala-prensa/prensa/ucrania">Ucrania<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='7' class="pointmap"></div>
+                </div>
+                <div class="gm g8">
+                    <div id='g8' class="mapboxd">
+                        <div id='e8'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/israel">Israel<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='8' class="pointmap"></div>
+                </div>
+                <div class="gm g9">
+                    <div id='g9' class="mapboxd">
+                        <div id='e9'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/rusia">Rusia<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='9' class="pointmap"></div>
+                </div>
+                <div class="gm g10">
+                    <div id='g10' class="mapboxd">
+                        <div id='e10'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/china">China<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='10' class="pointmap"></div>
+                </div>
+                <div class="gm g11">
+                    <div id='g11' class="mapboxd">
+                        <div id='e11'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/japon">Japón<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='11' class="pointmap"></div>
+                </div>
+                <div class="gm g12">
+                    <div id='g12' class="mapboxd">
+                        <div id='e12'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/singapur">Singapur<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='12' class="pointmap"></div>
+                </div>
+                <div class="gmv g13">
+                    <div id='g13' class="mapboxd">
+                        <div id='e13'  class="enlaces">
+                            <a href="{{preurl}}/sala-prensa/prensa/australia">Australia<div class="flechapais"></div></a>
+                        </div>
+                        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/mapbox.svg" alt="">
+                    </div>
+                    <div id='13' class="pointmap"></div>
+                </div>
+            </div>
+            <div></div>
+            <div class ='qdn'>
+                <span class="title">¿QUÉ SE DICE DE NOSOTROS?</span>
+                <img class="mapsline" src="{{preurl}}/storage/app/media/uploaded-files/templates/mapsline.svg" alt="">
+                <span class="stitle">Descubre qué se dice de Cádiz alrededor del mundo.</span>
+            </div>
+        </div>
+    </div> 
+    </div>
+    {% component 'staticPage' %}
+        
     {% partial 'site/footer' %}
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
-<script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
 
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
+
+     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/mapcadiz.js"></script>
+    
+    {% framework %}
 
   </body>
 </html>
